samples/_failures_safe/1761714063_f32e53_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_628ab987.c: In function ‘main’:
./samples/SAFE/__tmp_628ab987.c:174:15: error: expected ‘;’ at end of input
  174 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_628ab987.c:174:9: error: expected declaration or statement at end of input
  174 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_628ab987.c:174:9: error: expected declaration or statement at end of input
